Findbugs results fix and monitoring setup