@@ -24,6 +24,14 @@
 				<configuration>
 					<executable>java</executable>
 					<arguments>
+						<argument>-Dcom.sun.management.jmxremote</argument>
+			            <argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
+            			<argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
+            			<argument>-Dcom.sun.management.jmxremote.local.only=false</argument>
+            			<argument>-Djava.rmi.server.hostname=50.116.0.240</argument>
+            			<argument>-Dcom.sun.management.jmxremote.port=6002</argument>
+						<argument>-XX:+PrintGCDetails</argument>
+						<argument>-XX:+PrintGCTimeStamps</argument>
 						<argument>-Xss256k</argument>
 						<argument>-Xms1024m</argument>
 						<argument>-Xmx1024m</argument>
